--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -42,4 +45,13 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    /**
+     * for viewModels
+     */
+    implementation "androidx.fragment:fragment-ktx:1.3.6"
+    /**
+     * Viewbinding
+     */
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.0-beta02'
 }
